--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "museum-paintings",
+  "name": "Thomas-Model-View-Controller-MVC-Tech-Blog",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ThomasCalle/Thomas-Model-View-Controller-MVC-Tech-Blog.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -10,6 +14,10 @@
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ThomasCalle/Thomas-Model-View-Controller-MVC-Tech-Blog/issues"
+  },
+  "homepage": "https://github.com/ThomasCalle/Thomas-Model-View-Controller-MVC-Tech-Blog#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-session-sequelize": "^7.0.4",
